Fixed status messages displaying off center on smaller screens

--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ input {
     flex-direction: column-reverse;
 }
 
+.status-message {
+    align-self: center;
+}
+
 .error-message {
     font-weight: 300;
     font-size: 25px;
